dotenv_codegen/tests/ui/dotenv_or_default_no_args.rs
#[macro_use]
extern crate dotenv_codegen;

pub fn main() {
    dotenv_or_default!();
}